[package]
name = "reoserv"
version = "1.16.1"
authors = ["Richard Leek <richard@richardleek.com>"]
edition = "2024"
description = "The rust powered endless online server emulator"
repository = "https://github.com/sorokya/reoserv"

[profile.release]
panic = 'abort'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
console = ["console-subscriber"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.50"

[dependencies]
anyhow = "1.0"
bytes = "1.11"
config = { version = "0.15", features = ["toml", "ron"] }
crc = "3.4"
chrono = "0.4"
lazy_static = "1.5"
log = "0.4"
num-traits = "0.2"
pretty_env_logger = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
reqwest = "0.13"
glob = "0.3.3"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
console-subscriber = { version = "0.5", optional = true }
mysql_async = { version = "0.36.1", features = ["chrono"] }
argon2 = "0.6.0-rc.7"
eolib = { version = "3.0.0", features = ["serde"] }
eoplus = "1.0.0-RC1"
rand = "0.10"
evalexpr = "13.1"
duration-str = "0.21"
version-compare = "0.2"
mail-send = "0.5"
tokio-tungstenite = "0.29"
hex = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }
regex = "1.12.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
